// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileSystemUtil > walkFileTree > returns node for a valid path 1`] = `
{
  "blocks": 8,
  "children": [
    {
      "blocks": 8,
      "children": [],
      "isDirectory": true,
      "name": "bar",
      "path": "src/main/foo",
    },
    {
      "blocks": 12,
      "isDirectory": false,
      "name": "daz",
      "path": "src/main/foo",
    },
    {
      "blocks": 23,
      "isDirectory": false,
      "name": "bazzing.gaz",
      "path": "src/main/foo",
    },
  ],
  "isDirectory": true,
  "name": "foo",
  "path": "src/main",
}
`;

exports[`FileSystemUtil > walkFileTree > returns node for a valid single directory with children 1`] = `
{
  "blocks": 8,
  "children": [
    {
      "blocks": 8,
      "children": [
        {
          "blocks": 8,
          "children": [
            {
              "blocks": 8,
              "children": [],
              "isDirectory": true,
              "name": "bar",
              "path": "src/main/foo",
            },
            {
              "blocks": 12,
              "isDirectory": false,
              "name": "daz",
              "path": "src/main/foo",
            },
            {
              "blocks": 23,
              "isDirectory": false,
              "name": "bazzing.gaz",
              "path": "src/main/foo",
            },
          ],
          "isDirectory": true,
          "name": "foo",
          "path": "src/main",
        },
        {
          "blocks": 19,
          "isDirectory": false,
          "name": ".testing",
          "path": "src/main",
        },
        {
          "blocks": 8,
          "children": [],
          "isDirectory": true,
          "name": ".empty",
          "path": "src/main",
        },
        {
          "blocks": 8,
          "children": [
            {
              "children": [],
              "isDirectory": true,
              "name": "someEmptyDir",
              "path": "src/main/.full",
            },
            {
              "blocks": 12,
              "isDirectory": false,
              "name": "aFile",
              "path": "src/main/.full",
            },
          ],
          "isDirectory": true,
          "name": ".full",
          "path": "src/main",
        },
      ],
      "isDirectory": true,
      "name": "main",
      "path": "src",
    },
    {
      "blocks": 52,
      "isDirectory": false,
      "name": "index.ts",
      "path": "src",
    },
  ],
  "isDirectory": true,
  "name": "src",
  "path": "",
}
`;

exports[`FileSystemUtil > walkFileTree > returns node for a valid single directory with no children 1`] = `
{
  "blocks": 8,
  "children": [],
  "isDirectory": true,
  "name": "test",
  "path": "",
}
`;

exports[`FileSystemUtil > walkFileTree > returns root node for an empty path 1`] = `
{
  "blocks": 0,
  "children": [
    {
      "blocks": 8,
      "children": [
        {
          "blocks": 8,
          "children": [
            {
              "blocks": 8,
              "children": [
                {
                  "blocks": 8,
                  "children": [],
                  "isDirectory": true,
                  "name": "bar",
                  "path": "src/main/foo",
                },
                {
                  "blocks": 12,
                  "isDirectory": false,
                  "name": "daz",
                  "path": "src/main/foo",
                },
                {
                  "blocks": 23,
                  "isDirectory": false,
                  "name": "bazzing.gaz",
                  "path": "src/main/foo",
                },
              ],
              "isDirectory": true,
              "name": "foo",
              "path": "src/main",
            },
            {
              "blocks": 19,
              "isDirectory": false,
              "name": ".testing",
              "path": "src/main",
            },
            {
              "blocks": 8,
              "children": [],
              "isDirectory": true,
              "name": ".empty",
              "path": "src/main",
            },
            {
              "blocks": 8,
              "children": [
                {
                  "children": [],
                  "isDirectory": true,
                  "name": "someEmptyDir",
                  "path": "src/main/.full",
                },
                {
                  "blocks": 12,
                  "isDirectory": false,
                  "name": "aFile",
                  "path": "src/main/.full",
                },
              ],
              "isDirectory": true,
              "name": ".full",
              "path": "src/main",
            },
          ],
          "isDirectory": true,
          "name": "main",
          "path": "src",
        },
        {
          "blocks": 52,
          "isDirectory": false,
          "name": "index.ts",
          "path": "src",
        },
      ],
      "isDirectory": true,
      "name": "src",
      "path": "",
    },
    {
      "blocks": 8,
      "children": [],
      "isDirectory": true,
      "name": "test",
      "path": "",
    },
  ],
  "group": "",
  "isDirectory": true,
  "lastModifiedTime": "",
  "name": "",
  "owner": "",
  "path": "",
  "permissions": [],
  "size": 0,
}
`;
